0.9.3
- Improved: Allow gametype to auto start without players.
- Fix: NPC Maker not spawning NPCs in some cases.
- Fix: d1_trainstation_01 queue sometimes blocking the player.

0.9.2:
- Fix: logic_auto and trigger_auto firing too many events.
- Improved: Slightly offset the glow on physcannon to prevent culling.

0.9.1:
- Feature: Dynamic crosshair overhaul, no longer requires capturing the framebuffer, can be changed in the options menu.
- Feature: Native game hints.
- Feature: Deathmatch gametype, set lambda_gametype convar to 'hl2dm' to try it out.
- Feature: Ability to command friendly NPCs via the Context menu.
- Feature: Vote system, allows players to vote: Skip Map, Change to Map, Kick Player, Restart Round.
- Feature: Allow players to kill every NPC, the game will restart the map if a critical NPC died, set 'lambda_allow_npcdmg' to 0 to disable this.
- Feature: Cockroaches, more or less like the classic ones from Half-Life 1, can be found hiding under objects.
- Feature: Gore effects when crushed or exploded, set 'lambda_gore' to 0 disable, enabled by default.
- Feature: Difficulty can be now set via 'lambda_difficulty', values 1: Very Easy, 2: Easy, 3: Normal, 4: Hard, 5: Very Hard
- Feature: Gravity Gun Glow, can be turned by setting 'physcannon_glow' to 0.
- Improved: Combine will now emit hurt sounds when taking damage.
- Improved: Allow to select all known player models the server has.
- Improved: Player sounds and taunts are now specific to the player model type.
- Improved: Replaced some killicons, credits to _Kilburn for the icons.
- Improved: The scoreboard has some improvements to better match gametypes and their rules.
- Improved: Flashlight no longer drains suit energy.
- Improved: Overall performance improvements for server and client.
- Improved: Players will no longer have empty grenades or slams in their inventory.
- Add: Game content mounting for episodic content, automatically creates and mounts GMA based on gametype.